--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,4 @@ DerivedDataCache/*
 .idea/.idea.Maze.dir/.idea/indexLayout.xml
 .idea/.idea.Maze.dir/.idea/projectSettingsUpdater.xml
 .idea/.idea.Maze.dir/.idea/vcs.xml
+.idea/.idea.Maze.dir/.idea/encodings.xml
